fixing tab chatbot alignment

--- a/components/Showcase/ShowComp/AIChat/AIChat.module.scss
+++ b/components/Showcase/ShowComp/AIChat/AIChat.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   height: 100vh;
 
-  @media (max-width: 600px) {
+  @media (max-width: 1030px) {
     height: 90vh;
   }
 
